@@ -1,3 +1,9 @@
+2004-11-29  Marcus Meissner  <marcus@jet.franken.de>
+	
+	Edward Kuns
+	* library.c: Added hack to detect / if no 
+	  object has parentid 0. fixes Canon EOS 20d.
+
 2004-11-15  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Added Panasonic DMC-FZ20.
